--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         ao clicar nesse botão, ira se ativar o css usando uma função javascript.
     </h3>
     <button onclick="AtivaCSS()">Ativar CSS</button>
+    <div id="explicacao-css" style="display:none; margin-top:24px; background:#e6f2ff; padding:16px; border-radius:8px; max-width:500px; margin-left:auto; margin-right:auto;">
+        <strong>Explicação:</strong><br>
+        Ao clicar no botão, o JavaScript cria dinamicamente uma tag <code>&lt;link&gt;</code> que referencia o arquivo <code>style.css</code> e adiciona essa tag no <code>&lt;head&gt;</code> do HTML. Assim, os estilos definidos no CSS passam a ser aplicados na página instantaneamente.
+    </div>
     </main>
 </body>
 <script src="script.js"></script>
